--- a/t01-todo-server/build.gradle
+++ b/t01-todo-server/build.gradle
@@ -19,6 +19,10 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     compileOnly 'org.projectlombok:lombok:1.18.20'
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
 }
 
 test {
